Traduction de l'interface web

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -35,21 +35,21 @@
                 aria-current="true"
               >
                 <i class="fas fa-tachometer-alt fa-fw me-3"></i
-                ><span>Main dashboard</span>
+                ><span>Dashboard principal</span>
               </a>
               <a
                 href="/servers"
                 class="list-group-item list-group-item-action py-2 ripple"
               >
                 <i class="fas fa-server fa-fw me-3"></i
-                ><span>Manage Servers</span>
+                ><span>Gérer les serveurs</span>
               </a>
               <a
                 href="/logout"
                 class="list-group-item list-group-item-action py-2 ripple"
               >
                 <i class="fas fa-sign-out-alt fa-fw me-3"></i
-                ><span>Logout</span>
+                ><span>Se déconnecter</span>
               </a>
             </div>
           </div>
@@ -93,7 +93,7 @@
         <div class="container pt-4">
           <!--Section: Main-->
           <section>
-            <h1>Bot Details</h1>
+            <h1>Détails du bot</h1>
             <div class="row">
               <div class="col-xl-3 col-sm-6 col-12 mb-4">
                 <div class="card">
@@ -101,7 +101,7 @@
                     <div class="d-flex justify-content-between px-md-1">
                       <div>
                         <h3 class="text-danger" id="commands">-</h3>
-                        <p class="mb-0">Commands runned</p>
+                        <p class="mb-0">Commandes exécutées</p>
                       </div>
                       <div class="align-self-center">
                         <i class="fas fa-rocket text-danger fa-3x"></i>
@@ -116,7 +116,7 @@
                     <div class="d-flex justify-content-between px-md-1">
                       <div>
                         <h3 class="text-success" id="users">-</h3>
-                        <p class="mb-0">Users</p>
+                        <p class="mb-0">Utilisateurs</p>
                       </div>
                       <div class="align-self-center">
                         <i class="far fa-user text-success fa-3x"></i>
@@ -131,7 +131,7 @@
                     <div class="d-flex justify-content-between px-md-1">
                       <div>
                         <h3 class="text-warning" id="guilds">-</h3>
-                        <p class="mb-0">Servers</p>
+                        <p class="mb-0">Serveurs</p>
                       </div>
                       <div class="align-self-center">
                         <i class="fas fa-server text-warning fa-3x"></i>
@@ -146,7 +146,7 @@
                     <div class="d-flex justify-content-between px-md-1">
                       <div>
                         <h3 class="text-info" id="songs">-</h3>
-                        <p class="mb-0">Songs played</p>
+                        <p class="mb-0">Chansons jouées</p>
                       </div>
                       <div class="align-self-center">
                         <i class="fas fa-music text-info fa-3x"></i>
@@ -166,12 +166,12 @@
                     <p>
                       © 2021
                       <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                        >Discord Music Bot</a
-                      >. All rights reserved. Made by
-                      <a href="//github.com/SudhanPlayz">Sudhan</a> and its
+                        >Casserole - TurfuMC</a
+                      >. Tous droits réservés. Editer par
+                      <a href="//github.com/TurfuMC">TurfuMC.</a>
                       <a
-                        href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                        >contributers</a
+                        href="//fr.tipeee.com/turfumc"
+                        >Faire un don</a
                       >
                     </p>
                   </div>
