--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discord Music Bot</title>
+    <title>Casserole</title>
     <link rel="shortcut icon" href="/logo.gif" type="image/gif" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -34,7 +34,7 @@
               height="30"
               class="d-inline-block align-text-top"
             />
-            Discord Music Bot
+            Casserole
           </a>
           <button
             class="navbar-toggler"
@@ -49,9 +49,9 @@
           </button>
           <div class="d-flex nav-links">
             <div class="d-flex justify-content-center">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-              <a class="nav-link" href="#features">Features</a>
-              <a class="nav-link" href="#commands">Commands</a>
+              <a class="nav-link active" aria-current="page" href="/">Accueil</a>
+              <a class="nav-link" href="#features">Caractéristiques</a>
+              <a class="nav-link" href="#commands">Commandes</a>
             </div>
             <a
               href="/dashboard"
@@ -64,13 +64,13 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#features">Features</a>
+                <a class="nav-link" href="#features">Caractéristiques</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#commands">Commands</a>
+                <a class="nav-link" href="#commands">Commandes</a>
               </li>
             </ul>
           </div>
@@ -81,10 +81,10 @@
       <!-- Hero entry 👌 -->
       <div class="hero">
         <div id="hero" class="text-center">
-          <h1>Discord Music Bot</h1>
+          <h1>Casserole</h1>
           <p>
-            An advanced discord music bot, supports Spotify, Soundcloud, YouTube
-            with Shuffling, Volume Control and Web Dashboard!
+            Casserole est bot de musique discorde avancé qui prend en charge Spotify, SoundCloud, YouTube
+            avec contrôle du volume et tableau de bord web et plein d'autre !
           </p>
         </div>
       </div>
@@ -96,10 +96,10 @@
           <div class="row justify-content-center text-center">
             <div class="col-md-10 col-lg-8">
               <div class="header-section">
-                <h2 class="title">Exclusive <span>Features</span></h2>
+                <h2 class="title">Caractéristiques <span>Exclusif</span></h2>
                 <p class="description">
-                  There are many Features in discord music bot! Every awesome
-                  features of this bot has been descirbed below check it out 😉
+                  Il y a beaucoup de fonctionnalités dans Casserole !
+                  Toutes les caractéristiques géniales de ce bot ont été répertorier ci-dessous. Vérifiez-le 😉
                 </p>
               </div>
             </div>
@@ -109,12 +109,12 @@
               <div class="single-service">
                 <div class="part-1">
                   <i class="fab fa-spotify"></i>
-                  <h3 class="title">Spotify, Sound Cloud, YouTube Support</h3>
+                  <h3 class="title">Support de Spotify, Sound Cloud, YouTube</h3>
                 </div>
                 <div class="part-2">
                   <p class="description">
-                    Use your spotify playlist, youtube videos, yotube playlists
-                    and much more using this bot
+                    Ecouter vos playlist Spotify et YouTube
+                    et bien plus
                   </p>
                 </div>
               </div>
@@ -123,11 +123,11 @@
               <div class="single-service">
                 <div class="part-1">
                   <i class="fas fa-music"></i>
-                  <h3 class="title">Lag free music</h3>
+                  <h3 class="title">Pas de lag avec vos musiques</h3>
                 </div>
                 <div class="part-2">
                   <p class="description">
-                    Bot never lags while playing a song in a voice channel
+                    Casserole ne lag jamais par contre il chante comme une casserole :)
                   </p>
                 </div>
               </div>
@@ -140,8 +140,8 @@
                 </div>
                 <div class="part-2">
                   <p class="description">
-                    Control your song looping song or queue, You can even change
-                    server prefix and server dj role
+                    Controler vos musique, playlist, file d'attente 
+                    Configurer le prefix de casserole sur serveur votre serveur
                   </p>
                 </div>
               </div>
@@ -154,12 +154,12 @@
       <!-- Commands -->
       <div class="commands" id="commands">
         <div class="container">
-          <h2 class="title text-center">Commands</h2>
+          <h2 class="title text-center">Commandes</h2>
           <table class="table table-dark">
             <thead>
               <tr>
-                <th scope="col">Command</th>
-                <th scope="col">Aliases</th>
+                <th scope="col">Commandes</th>
+                <th scope="col">Alias</th>
                 <th scope="col">Usage</th>
                 <th scope="col">Description</th>
               </tr>
@@ -177,13 +177,13 @@
               <div class="copyright-text">
                 <p>
                   © 2021
-                  <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                    >Discord Music Bot</a
-                  >. All rights reserved. Made by
-                  <a href="//github.com/SudhanPlayz">Sudhan</a> and its
+                  <a href="//github.com/TurfuMC/Casserole"
+                    >Casserole - TurfuMC</a
+                  >. Tous droits réservés. Editer par
+                  <a href="//github.com/TurfuMC">TurfuMC.</a>
                   <a
-                    href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                    >contributers</a
+                    href="//fr.tipeee.com/turfumc"
+                    >Faire un don</a
                   >
                 </p>
               </div>
