--- a/views/servers.html
+++ b/views/servers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard - Servers</title>
+    <title>Dashboard - Serveurs</title>
     <link rel="shortcut icon" href="/logo.gif" type="image/gif" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -35,21 +35,21 @@
                 aria-current="true"
               >
                 <i class="fas fa-tachometer-alt fa-fw me-3"></i
-                ><span>Main dashboard</span>
+                ><span>Dashboard principal</span>
               </a>
               <a
                 href="/servers"
                 class="list-group-item list-group-item-action py-2 ripple active"
               >
                 <i class="fas fa-server fa-fw me-3"></i
-                ><span>Manage Servers</span>
+                ><span>Gérer les serveurs</span>
               </a>
               <a
                 href="/logout"
                 class="list-group-item list-group-item-action py-2 ripple"
               >
                 <i class="fas fa-sign-out-alt fa-fw me-3"></i
-                ><span>Logout</span>
+                ><span>Se déconnecter</span>
               </a>
             </div>
           </div>
@@ -80,7 +80,7 @@
             <!-- Brand -->
             <a class="navbar-brand text-white" href="/">
               <img src="/logo.gif" height="40" alt="" loading="lazy" />
-              Dashboard - Servers
+              Dashboard - Serveurs
             </a>
             <div>
               <h1 class="server-name"></h1>
@@ -96,7 +96,7 @@
         <div class="container pt-4">
           <!--Section: Main-->
           <section>
-            <h1>Select a server to manage</h1>
+            <h1>Sélectionnez un serveur à gérer</h1>
             <div id="servers" class="flex"></div>
           </section>
           <!-- Footer -->
@@ -108,12 +108,12 @@
                     <p>
                       © 2021
                       <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                        >Discord Music Bot</a
-                      >. All rights reserved. Made by
-                      <a href="//github.com/SudhanPlayz">Sudhan</a> and its
+                        >Casserole - TurfuMC</a
+                      >. Tous droits réservés. Editer par
+                      <a href="//github.com/TurfuMC">TurfuMC.</a>
                       <a
-                        href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                        >contributers</a
+                        href="//fr.tipeee.com/turfumc"
+                        >Faire un don</a
                       >
                     </p>
                   </div>
