--- a/views/index.html
+++ b/views/index.html
@@ -179,7 +179,7 @@
               <div class="single-service">
                 <div class="part-1">
                   <i class="fas fa-sliders-h"></i>
-                  <h3 class="title">Server Settings</h3>
+                  <h3 class="title">Paramètres du serveur</h3>
                 </div>
                 <div class="part-2">
                   <p class="description">
