--- a/views/index.html
+++ b/views/index.html
@@ -129,7 +129,7 @@
         >
           <h1>Casserole</h1>
           <p>
-            Casserole est bot de musique discorde avancé qui prend en charge Spotify, SoundCloud, YouTube
+            Casserole est bot de musique discord avancé qui prend en charge Spotify, SoundCloud, YouTube
             avec contrôle du volume et tableau de bord web et plein d'autre !
           </p>
         </div>
