--- a/views/index.html
+++ b/views/index.html
@@ -293,12 +293,12 @@
               <div class="copyright-text">
                 <p>
                   © 2021
-                  <a href="//github.com/TurfuMC/Casserole"
-                    >Casserole - TurfuMC</a
+                  <a href="//github.com/zendrique/Casserole"
+                    >Casserole - Zendrique</a
                   >. Tous droits réservés. Editer par
-                  <a href="//github.com/TurfuMC">TurfuMC.</a>
+                  <a href="//github.com/zendrique">Zendrique.</a>
                   <a
-                    href="//fr.tipeee.com/turfumc"
+                    href="//paypal.me/zendrique"
                     >Faire un don</a
                   >
                 </p>
