Suppression de crédit

--- a/views/server.html
+++ b/views/server.html
@@ -215,11 +215,11 @@
                     <p>
                       © 2021
                       <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                        >Casserole - TurfuMC</a
+                        >Casserole - Zendrique</a
                       >. Tous droits réservés. Editer par
-                      <a href="//github.com/TurfuMC">TurfuMC.</a>
+                      <a href="//github.com/zendrique">Zendrique.</a>
                       <a
-                        href="//fr.tipeee.com/turfumc"
+                        href="//paypal.me/zendrique"
                         >Faire un don</a
                       >
                     </p>
